--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-
+	<dependency>
+		<groupId>org.liquibase</groupId>
+		<artifactId>liquibase-core</artifactId>
+		<version>3.4.1</version>
+	</dependency>
 	<build>
 		<plugins>
 			<plugin>
